fix the bug related to the card not showing when the there whas not current pokemon saved in the store

--- a/src/pages/Pokedex.module.scss
+++ b/src/pages/Pokedex.module.scss
@@ -24,7 +24,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    min-height: 135px;
   }
 }
 .pokedex_list {
